Added a warning before importing dropped BibTeX files